--- a/src/componentes/Colaborador/Colaborador.css
+++ b/src/componentes/Colaborador/Colaborador.css
@@ -1,5 +1,6 @@
 .colaborador {
     width: 280px;
+    position: relative;
 }
 
 .colaborador .cabecalho {
@@ -34,4 +35,10 @@
     color: #212121;
     padding: 0 16px;
     margin: 10px;
+}
+
+.deletar{
+    position: absolute;
+    right: -10px;
+    top: -10px;
 }
