--- a/src/componentes/Time/Time.css
+++ b/src/componentes/Time/Time.css
@@ -1,6 +1,7 @@
 .time{
     text-align: center;
     padding: 32px;
+    position: relative;
 }
 
 .time h3{
@@ -14,4 +15,10 @@
     display: flex;
     justify-content: space-around;
     margin-top:32px;
+}
+
+.input-cor{
+    position:absolute;
+    top: 20px;
+    right: 50px;
 }
